src/test/deca/syntax/valid/SansObjet/SumExpr-Mix.deca
// Description:
//    Multiple sum expressions, including a negative operand.
//
// Results:
//    (void)
//
// Historique:
//    cree le 09/01/2022

{
       w + x - y + - z;
}
